Split up long script file

--- a/ShiftCaptain/Web.config
+++ b/ShiftCaptain/Web.config
@@ -52,11 +52,9 @@
     </defaultConnectionFactory>
   </entityFramework>
   <connectionStrings>
-    <!--<add name="ShiftCaptainEntities" connectionString="metadata=res://*/Models.ScheduleModel.csdl|res://*/Models.ScheduleModel.ssdl|res://*/Models.ScheduleModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MEDIEVALTIMES\ROUNDTABLE;initial catalog=ShiftCaptain;user id=sa;password=DeloresEuton;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <!--<add name="ShiftCaptainEntities" connectionString="metadata=res://*/Models.ShiftCaptainModel.csdl|res://*/Models.ShiftCaptainModel.ssdl|res://*/Models.ShiftCaptainModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MEDIEVALTIMES\ROUNDTABLE;initial catalog=ShiftCaptain;user id=sa;password=DeloresEuton;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="DefaultConnection" connectionString="data source=MEDIEVALTIMES\ROUNDTABLE;initial catalog=ShiftCaptain;user id=sa;password=DeloresEuton;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=MEDIEVALTIMES\ROUNDTABLE;initial catalog=ShiftCaptain;user id=captain;password=shift;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   
-  <add name="ShiftCaptainEntities" connectionString="metadata=res://*/Models.ShiftCaptainModel.csdl|res://*/Models.ShiftCaptainModel.ssdl|res://*/Models.ShiftCaptainModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MEDIEVALTIMES\ROUNDTABLE;initial catalog=ShiftCaptain;user id=sa;password=DeloresEuton;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <add name="ShiftCaptainEntities" connectionString="metadata=res://*/Models.ShiftCaptainModel.csdl|res://*/Models.ShiftCaptainModel.ssdl|res://*/Models.ShiftCaptainModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MEDIEVALTIMES\ROUNDTABLE;initial catalog=ShiftCaptain;user id=captain;password=shift;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
